Add the navigation bar

--- a/index.html
+++ b/index.html
@@ -9,6 +9,13 @@
     <script src="./index.js"></script>
 </head>
 <body>
-    
+    <nav>
+        <ul>
+            <li>Home</li>
+            <li>Designs</li>
+            <li>Projects</li>
+            <li>Contacts</li>
+        </ul>
+    </nav>
 </body>
 </html>
