add image files

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Purity Wandia</title>
     <link rel="stylesheet" href="./index.css">
     <script src="./index.js"></script>
+    <script src="https://kit.fontawesome.com/72b58c1d08.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <nav>
@@ -17,5 +18,25 @@
             <li>Contacts</li>
         </ul>
     </nav>
+    <div class="aboutMe">
+        <p>
+            Hi! i'm Wandia,a full stack web developer based in Nairobi,Kenya,<br>
+            Apart from designing i love adventure and charity work.
+        </p>
+        <a href="https://www.facebook.com/"><i class="fa-brands fa-facebook"></i>/<a>
+        <a href="https://twitter.com"><i class="fa-brands fa-twitter"></i></a>
+        <a href="https://www.instagram.com"><i class="fa-brands fa-instagram"></i></a>
+        <a href="https://ke.linkedin.com"><i class="fa-brands fa-linkedin"></i></a>
+    </div>
+    <footer>
+        <div class ="contact">
+            <li>+254 729 845 222</li>
+            <li> P.O.BOX 00100 -1931,Nairobi</li>
+        </div>
+        
+    </footer>
+    <div class="img">
+       <img src="./photo/c1d68069-afe1-44d2-bdfe-a792fc5a0056.jpg" alt="Wandia" title="The best dev">
+    </div>
 </body>
 </html>
